# Firmware_ESP32_Pot

First_project/main/: main.c
adc/main/: adc1_example_main.c
adc2/: sdkconfig  sdkconfig.old
adc2/main/: adc2_example_main.c
bt_spp_acceptor/: BluetoothHandle.h  sdkconfig  sdkconfig.old
bt_spp_acceptor/main/: example_spp_acceptor_demo.c
deep_sleep/: sdkconfig  sdkconfig.old
deep_sleep/helloWorld/: package-lock.json
deep_sleep/main/: CMakeLists.txt  deep_sleep_example_main.c
deep_sleep/main/include/: Bluetooth.h  httpmanager.h  memorymanager.h  sensormanager.h  wifimanager.h
deep_sleep/main/src/: bluetooth.c  function.c  httpmanager.c  memorymanager.c  sensormanager.c  wifimanager.c
esp-idf/examples/storage/partition_api/partition_ops/main/: main.c
esp-idf/examples/wifi/wps/main/: wps.c
fast_scan/: sdkconfig  sdkconfig.old
i2c_self_test/: sdkconfig  sdkconfig.old
i2c_self_test/main/: i2c_example_main.c
potsens/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
potsens/main/: CMakeLists.txt  main.c
potsens/main/include/: Bluetooth.h  function.h
potsens/main/src/: bluetooth.c
